# RVC_Voice_Cloning

./: .gitignore  requirements.txt
rvc_pipeline/: config.py  pyproject.toml
rvc_pipeline/src/: preprocess.py  slicer.py  train.py
rvc_pipeline/src/rvc_pipeline/: __init__.py  config.py  dataset.py  execution_results.py  pipeline.py  preprocess.py  slicer.py  train.py
rvc_pipeline/src/rvc_pipeline/config/: process_config.py  validation_config.py
rvc_pipeline/src/rvc_pipeline/dataset_validation/: metrics.py  models.py  validator.py
rvc_pipeline/src/rvc_pipeline/logging/: logging_config.py
rvc_pipeline/src/rvc_pipeline/utils/concurrency/: task_executor.py
rvc_pipeline/src/rvc_pipeline/utils/data_manager/: audio_handler.py  file_handler.py
rvc_pipeline/tests/preprocessing/: conftest.py  test_preprocess_all.py  test_process_file.py
rvc_pipeline/tests/slicer/: conftest.py  test_audio_edge_cases.py  test_generate_chunks.py  test_save_chunks.py  test_slice_audio.py  test_slice_file.py
