[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvc_voice_cloning"
version = "0.1.0"
description = "RVC pipeline project"

requires-python = ">=3.14.3"
dependencies = [
    "librosa >=0.11.0",
    "tqdm >=4.67.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"